[gd_scene load_steps=8 format=3 uid="uid://xascm0kyyw75"]

[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://Themes/ListItemPanel/ListItemPanelTheme.tres" id="1_b0c2f"]
[ext_resource type="Script" path="res://Scripts/Menus/InventoryPanel/InventorySlotPanel.gd" id="2_6x7us"]
[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="2_sthgl"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="3_4ev4x"]
[ext_resource type="Theme" uid="uid://cr8ed0igvvahw" path="res://Themes/ButtonRowTheme.tres" id="7_5a212"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f8w3s"]
atlas = ExtResource("2_sthgl")
region = Rect2(96, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_k380f"]
atlas = ExtResource("2_sthgl")
region = Rect2(96, 32, 8, 8)

[node name="InventorySlotPanel" type="Panel" groups=["InventorySlotPanel"]]
custom_minimum_size = Vector2(1120, 76)
theme = ExtResource("1_b0c2f")
script = ExtResource("2_6x7us")
isShopItem = true

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(32, 38)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_f8w3s")

[node name="CenterItemName" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 64.0
offset_right = 324.0
grow_vertical = 2
alignment = 1

[node name="ItemName" type="RichTextLabel" parent="CenterItemName"]
clip_contents = false
layout_mode = 2
theme = ExtResource("3_4ev4x")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
text = "Item Name Goes Here"
fit_content = true

[node name="CenterItemType" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 340.0
offset_right = 480.0
grow_vertical = 2
alignment = 1

[node name="ItemType" type="RichTextLabel" parent="CenterItemType"]
clip_contents = false
layout_mode = 2
text = "Item Type Here"
fit_content = true

[node name="CenterItemCount" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ItemCount" type="RichTextLabel" parent="CenterItemCount"]
clip_contents = false
layout_mode = 2
text = "x9,999 / 9,999"
fit_content = true

[node name="CenterItemCost" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 89.0
offset_right = 158.0
alignment = 1

[node name="GoldSprite" type="Sprite2D" parent="CenterItemCost"]
position = Vector2(-15, 38)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_k380f")

[node name="ItemCost" type="RichTextLabel" parent="CenterItemCost"]
clip_contents = false
layout_mode = 2
text = "456,789"
fit_content = true

[node name="CenterEqiuppedTo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 156.0
offset_top = -1.0
offset_right = 271.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EquippedTo" type="RichTextLabel" parent="CenterEqiuppedTo"]
layout_mode = 2
bbcode_enabled = true
text = "[right]Equipped to:
Combatant Name Here[/right]"
fit_content = true

[node name="CenterButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterButtons"]
layout_mode = 2
theme = ExtResource("7_5a212")
alignment = 2

[node name="UseButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Use"

[node name="EquipButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Equip"

[node name="UnequipButton" type="Button" parent="CenterButtons/HBoxContainer"]
layout_mode = 2
text = "Unequip"

[node name="TrashButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Trash"

[node name="BuyButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Buy"

[node name="SellButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Sell
"

[node name="DetailsButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Details"

[connection signal="pressed" from="CenterButtons/HBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/UnequipButton" to="." method="_on_unequip_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/TrashButton" to="." method="_on_trash_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/DetailsButton" to="." method="_on_details_button_pressed"]
